# cinematography-portfolio

./: .gitignore  README.md  SEO_TODO.md  build.sh  deploy.sh  download_assets.sh  format.sh  package-lock.json  package.json  sync_assets.sh  sync_terraform.sh  sync_terraform_env.sh  upload_assets.sh
.github/workflows/: build.yaml  deploy-backend.yaml  deploy-frontend.yaml  prettier.yaml  validate.yaml  verify-build.yaml
app/components/: ProjectDisplay.tsx
app/components/Footer/: footer.css
app/components/IconButton/: IconButton.tsx
app/components/ProjectDisplay/: ProjectDisplay.tsx
app/components/TitleBar/: title-bar.css
app/pages/: about.tsx  home.tsx  reel.tsx  work.tsx
app/styles/: about.css  home.css  index.css  reel.css
frontend/: .env  .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: root.tsx  routes.ts
frontend/app/pages/: about.tsx  contact.tsx  home.tsx  reel.tsx  work.tsx
frontend/app/styles/: about.css  contact.css  home.css  (+3 more)
frontend/public/: llms.txt  robots.txt  sitemap.xml
frontend/src/: main.tsx  vite-env.d.ts
infra/: main.tf
infra/deploy/: pyproject.toml
infra/frontend-deployment/: README.md  main.py  pyproject.toml
infra/terraform/: .terraform.lock.hcl  analytics.tf  api.tf  assets.tf  backend.tf  cognito.tf  deploy.sh  dynamodb.tf  frontend.tf  layer.tf  main.tf  outputs.tf  sync_environment.sh
scripts/: build.sh  deploy.sh  format.sh  lint-all.sh
scripts/optimize_images/: config.py  main.py  optimize-images  pyproject.toml
scripts/seed_assets/: pyproject.toml  seed_assets.py
(+68 files in other folders)
