[project]
name = "optimize-images"
version = "0.1.0"
description = "CLI to optimize images for the web"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Pillow>=11.0",
    "pillow-heif>=0.18",
    "typer>=0.15",
    "rich>=13.0",
]

[project.scripts]
optimize-images = "main:main"
